--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@ img.hover-shadow {
 <!-- Container (Services Section) -->
 <div id="SERVICES" class="container-fluid text-center">
   <h2>CLASSES</h2>
- <hr style="border-bottom:6px solid darkred;width:50px;margin-top:0;text-align:center;">
+ <hr style="border-bottom:6px solid darkred;width:50px;margin-top:0;text-align:center;justify-content:center">
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
