--- a/index.html
+++ b/index.html
@@ -26,32 +26,8 @@
    #Main{background-color:skyblue;}
    #contact{background-color:peachpuff}
    #move{background-color: lemonchiffon;}
-  /* override position and transform in 3.3.x 
-.carousel-inner .item.left.active {
-  transform: translateX(-33%);
-}
-.carousel-inner .item.right.active {
-  transform: translateX(33%);
-}
 
-.carousel-inner .item.next {
-  transform: translateX(33%)
 
-}
-.carousel-inner .item.prev {
-  transform: translateX(-33%)
-}
-
-.carousel-inner .item.right,
-.carousel-inner .item.left { 
-  transform: translateX(0);
- 
-}
-.carousel-inner .item{padding-left:9em;}
-#EVENTS .col-md-10{width:100%;margin: 0;padding: 0;}
-#EVENTS .col-md-6{width: 30%;padding-top:2px;}
-#EVENTS .col-md-6 img{width:380px;height:250px;}
-*/
 .carousel-control.left,.carousel-control.right {background-image:black;}
 
 .item{width:100%;}
@@ -1024,7 +1000,7 @@ img.hover-shadow {
   <a href="#myPage" title="To Top">
     <span style="color: maroon;" class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made By <a href="#" title="Visit us">-R&S company</a></p>
+  <p>Made By <a href="#" title="Visit us">-abc</a></p>
 </footer>
 
 <!-- Appy Chatbot widget, Paste the code in the <body> section -->
